// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentBlock component does not include SectionHeader when there's no title 1`] = `
<div
  className="content-block"
>
  <Figure
    alignment="right-collapse"
    alt="cool image of image.com"
    image="image.com?w=600&h=600&fit=fill"
    imageClassName={null}
    size="one-third"
  >
    <TextContent
      className={null}
      styles={Object {}}
    >
      Test Content
    </TextContent>
  </Figure>
</div>
`;

exports[`ContentBlock component is rendered with the proper child components when image is set 1`] = `
<div
  className="content-block"
>
  <SectionHeader
    preTitle="Test Super Title"
    title="Test Title"
  />
  <Figure
    alignment="right-collapse"
    alt="cool image of image.com"
    image="image.com?w=600&h=600&fit=fill"
    imageClassName={null}
    size="one-third"
  >
    <TextContent
      className={null}
      styles={Object {}}
    >
      Test Content
    </TextContent>
  </Figure>
</div>
`;

exports[`ContentBlock component it works beautifully with content and an empty image prop 1`] = `
<div
  className="content-block"
>
  <TextContent
    className={null}
    styles={Object {}}
  >
    hi there
  </TextContent>
</div>
`;
